Add an action to run the app